修改播放的影片

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="embed-responsive embed-responsive-16by9">
             <!-- enablejsapi：必為1-->
             <!-- origin：防止惡意的第三方JS，入侵並控制youtube播放器-->
-            <iframe id="player1_2" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1"></iframe>
+            <iframe id="player1_2" src="https://www.youtube.com/embed/PQTjyKtsOuc?enablejsapi=1"></iframe>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-12">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe id="player2" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1"></iframe>
+            <iframe id="player2" src="https://www.youtube.com/embed/PQTjyKtsOuc?enablejsapi=1"></iframe>
           </div>
         </div>
       </div>
@@ -195,7 +195,7 @@
         player1 = new YT.Player('player1', {
           height: '390', // 高度預設值為390，css會調成responsive
           width: '640', // 寬度預設值為640，css會調成responsive
-          videoId: 'M7lc1UVf-VE',
+          videoId: 'PQTjyKtsOuc',
           events: {
             'onReady': onPlayerReady
           }
@@ -218,7 +218,7 @@
       
         //- Demo3：監聽播放狀態
         player3 = new YT.Player('player3', {
-          videoId: 'M7lc1UVf-VE',
+          videoId: 'PQTjyKtsOuc',
           events: {
             'onReady': onPlayerReadyDemo3,
             'onStateChange': onPlayerStateChange
