--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <h1>Youtube Iframe API Demo</h1>
-          <h6 class="pt-2">筆記文：<a href="">Let's Write</a></h6>
+          <h6 class="pt-2">筆記文：<a href="https://letswrite.tw/youtube-iframe-api/">Let's Write</a></h6>
         </div>
       </div>
       <hr class="pb-3"/>
